2007-06-09 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* scheme/gschem.c: Changed nil by #f.

	Nil is no longer supported by guile 1.8. Applied patch from
	Peter Clifton changing nil by #f. Thanks.
	Note there are still some files using nil.

	* src/x_compselect.c: Set alternative button order after buttons
	are created.

	Apply patch from Cesar Strauss, moving the 
	gtk_dialog_set_alternative_button_order call after buttons are 
	created, in the component selector window. Thanks.

2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_funcs.c, src/g_hook.c, src/g_keys.c, src/g_rc.c: Replace
	deprecated Guile functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.

2007-06-02 Peter Brett <peter@peter-b.co.uk>

	* configure.ac: Improve Guile configure checks.

	Makes configure scripts check for actual Guile version.

2007-06-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/i_callbacks.c: Fixed a behavior where you would cancel
	(via right mouse button or escape) the placing of components,
	but gschem would still be in the add component mode (and clicks
	would still place components).	Calling i_callback_cancel really
	means cancel the current mode and go into select mode.	This fix
	shouldn't break anything and still keeps all nice behaviors like
	pressing "ok" (on the component select dialog box), "apply",
	right mouse button cancel or escape cancel.

	* include/x_states.h: While debugging above, found out it was
	hard to map numeric state number to the symbolic name by looking
	at x_states.h.  Added comments to make this mapping more obvious.

2007-05-31 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/i_basic.c, src/i_callbacks.c,
	  src/o_picture.c: Cleanup code for status bar messages.

	  Applied patch from Ivan Stankovic cleaning up code used for
	  displaying status bar messages.

2007-05-29 Peter Clifton <pcjc2@cam.ac.uk>
