@@ -184,6 +184,14 @@ void i_show_state(TOPLEVEL *w_current, const char *message)
 
   what_to_say = g_strjoinv(" - ", (gchar **) array + i);
 
+  if(w_current->keyaccel_string) {
+     gchar *p = what_to_say;
+
+     what_to_say = g_strdup_printf("%s \t\t %s", w_current->keyaccel_string,
+           what_to_say);
+     g_free(p);
+  }
+
   i_update_status(w_current, what_to_say);
   g_free(what_to_say);
 }
