@@ -1,3 +1,9 @@
+2007-06-07 Ales Hvezda   <ahvezda@geda.seul.org>
+
+        * include/struct.h, src/s_toplevel.c: Applied patch from Ivan
+        Stankovic that displays entered characters in the status bar.
+	This patch added keyaccel_string to the TOPLEVEL structure.
+
 2007-06-04 Peter Brett <peter@peter-b.co.uk>
 
 	* src/g_rc.c, src/g_smob.c, src/s_clib.c: Replace deprecated Guile
